~ replacement of 'new Boolean()' with 'Boolean.valueOf()'